--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -6,11 +6,11 @@
       },
       {
           "route": "/private/a",
-          "allowedRoles": [ "authenticated", "aReader" ]
+          "allowedRoles": [ "aReader" ]
       },
       {
           "route": "/private/z",
-          "allowedRoles": [ "authenticated", "zReader" ]
+          "allowedRoles": [ "zReader" ]
       }
   ]
 }
